rocon_app_utilities/tests/test_rapps/rapp/valid/virtual_ancestor.rapp
display: Talker
description: Default ros style talker tutorial
public_interface: rocon_apps/talker.interface
public_parameters: rocon_apps/talker.parameters
