rocon_app_utilities/tests/test_rapps/rapp/invalid_classification/invalid_implementation_ancestor2.rapp
display: Talker
description: Default ros style talker tutorial
public_interface: foo.interface
public_parameters: foo.parameters
compatibility: rocon:/*
#launch: foo.launch
